--- a/app/src/main/res/navigation/truckpad_graph.xml
+++ b/app/src/main/res/navigation/truckpad_graph.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="br.com.antoniocgrande.truckpad_case.ui.fragments.HomeFragment"
-        android:label="HomeFragment"
+        android:label="@string/home_fragment"
         tools:layout="@layout/home_fragment">
         <action
             android:id="@+id/action_homeFragment_to_resultFragment"
@@ -18,7 +18,15 @@
     <fragment
         android:id="@+id/resultFragment"
         android:name="br.com.antoniocgrande.truckpad_case.ui.fragments.ResultFragment"
-        android:label="result_fragment"
-        tools:layout="@layout/result_fragment" />
+        android:label="@string/result_fragment"
+        tools:layout="@layout/result_fragment">
+        <argument
+            android:name="response"
+            app:argType="br.com.antoniocgrande.truckpad_case.data.response.RouteResponse" />
+        <argument
+            android:name="axis"
+            app:argType="string"
+            android:defaultValue="2" />
+    </fragment>
 
 </navigation>
