--- a/app/src/main/res/navigation/truckpad_graph.xml
+++ b/app/src/main/res/navigation/truckpad_graph.xml
@@ -25,8 +25,8 @@
             app:argType="br.com.antoniocgrande.truckpad_case.data.response.RouteResponse" />
         <argument
             android:name="axis"
-            app:argType="string"
-            android:defaultValue="2" />
+            android:defaultValue="2"
+            app:argType="string" />
     </fragment>
 
 </navigation>
